--- a/index.html
+++ b/index.html
@@ -3,79 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>비사이드 보드카 파티</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>비사이드 보드카 파티 시즌 10</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>🎉 B_SIDE VODKA PARTY SEASON 10 🎉</h1>
-        <p>대구대 최고의 파티에 여러분을 초대합니다!</p>
+        <h1>비사이드 보드카 파티 - 시즌 10</h1>
+        <p>도시에서 가장 신나는 보드카 파티에 참여하세요! 무제한 칵테일, 라이브 DJ, 그리고 더 많은 즐길 거리가 준비되어 있습니다.</p>
     </header>
 
-    <section class="event-details">
-        <h2>📅 행사 정보</h2>
+    <section id="event-details">
+        <h2>행사 정보</h2>
         <ul>
-            <li><strong>날짜:</strong> 2024년 10월 30일</li>
-            <li><strong>시간:</strong> 오후 8시 - 오전 1시</li>
-            <li><strong>장소:</strong> 대구대학교 정문 비사이드 펍</li>
-            <li><strong>입장료:</strong> 남성 20,000원 / 여성 18,000원</li>
+            <li>날짜: 2024년 10월 30일</li>
+            <li>시간: 오후 8시부터 새벽 1시까지</li>
+            <li>장소: 대구대 근처 비사이드 펍</li>
+            <li>가격: 남성 22,000원 / 여성 20,000원</li>
+            <li>얼리버드 할인: 남성 20,000원 / 여성 18,000원 (행사 전날까지)</li>
         </ul>
     </section>
 
-    <section class="features">
-        <h2>🍹 파티 특징</h2>
+    <section id="schedule">
+        <h2>행사 일정</h2>
         <ul>
-            <li>15종 이상의 칵테일을 무제한으로 즐길 수 있는 특별한 시간!</li>
-            <li>코스튬을 입고 오시면 무료 입장 혜택!</li>
-            <li>힙합, EDM, K-POP까지! 다양한 음악과 함께!</li>
-            <li>맥주 빨리 마시기 대회, 추첨 이벤트 등 다양한 미니게임 진행!</li>
+            <li>오후 8:00 - 행사 시작 / 입장</li>
+            <li>오후 8:30 - Team C.S.I 힙합 공연</li>
+            <li>오후 9:30 - 맥주 빨리 마시기 대회 (1차)</li>
+            <li>오후 10:00 - 코스프레 챔피언 시상식</li>
+            <li>오후 10:30 - 맥주 빨리 마시기 대회 (2차)</li>
+            <li>오후 11:00 - 불쇼</li>
+            <li>오후 11:30 - E.D.M 파티</li>
+            <li>새벽 1:00 - 행사 종료 / 퇴장</li>
         </ul>
     </section>
 
-    <section class="reservation">
-        <h2>💌 예약하기</h2>
-        <p>지금 예약하고 얼리버드 할인 혜택(2,000원 할인)을 받으세요!</p>
-        <p>아래 버튼을 눌러 [카카오톡 오픈채팅]으로 예약 문의를 해주세요.</p>
-        <a href="https://open.kakao.com/o/sZRwYbJe" class="btn-reserve" target="_blank">지금 예약하기</a>
+    <section id="reservation">
+        <h2>예약 안내</h2>
+        <p>자리를 예약하시려면 다음 결제 방법을 이용해 주세요:</p>
+        <ul>
+            <li>대구은행 / 계좌번호: 508-13-748203-4 / 이름: 박현정</li>
+            <li>카카오페이: <a href="https://qr.kakaopay.com/Ej82WWuAo">카카오페이로 결제하기</a></li>
+        </ul>
+    </section>
+
+    <section id="faq">
+        <h2>자주 묻는 질문</h2>
+        <p><strong>사전 예약이 필수인가요?</strong> 네, 사전 예약 시 할인 혜택과 VIP 테이블 추첨 기회를 얻을 수 있습니다.</p>
+        <p><strong>코스프레를 하면 무료로 입장할 수 있나요?</strong> 코스프레 챔피언에게 특별 상품이 제공되지만, 입장료는 정상적으로 부과됩니다.</p>
+        <p><strong>행사 중간에 입장이 가능한가요?</strong> 네, 행사는 오후 8시부터 새벽 1시까지 진행됩니다.</p>
+        <p><strong>행사 당일에 칵테일 쿠폰을 사용할 수 있나요?</strong> 아니요, 칵테일 쿠폰은 다음 방문 시 사용 가능합니다.</p>
     </section>
 
     <footer>
-        <p>문의: 비사이드 인스타그램 [<a href="https://www.instagram.com/pub_bside/" target="_blank">pub_bside</a>]</p>
-        <p>주소: 대구대학교 정문 비사이드 펍</p>
+        <p>자세한 정보는 인스타그램에서 확인하세요: <a href="https://www.instagram.com/pub_bside">@pub_bside</a></p>
     </footer>
 
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>비사이드 보드카 파티</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script> <!-- script.js 파일 추가 -->
-</head>
-<body>
-    <!-- 기존 파티 정보 HTML 코드가 여기 들어있을 거예요 -->
-
-    <section id="question-board">
-        <h2>📋 방문자 질문 게시판</h2>
-        <div class="question-form">
-            <h3>질문하기</h3>
-            <label for="visitor-name">이름:</label>
-            <input type="text" id="visitor-name" placeholder="이름을 입력하세요">
-            <br>
-            <label for="visitor-question">질문:</label>
-            <textarea id="visitor-question" placeholder="질문을 입력하세요"></textarea>
-            <br>
-            <button onclick="addQuestion()">질문 등록하기</button>
-        </div>
-        <div class="question-list">
-            <h3>질문 목록</h3>
-            <ul id="questions">
-                <!-- 질문이 여기에 추가될 거예요 -->
-            </ul>
-        </div>
-    </section>
-
-    <!-- 기존의 footer 등이 아래에 위치할 거예요 -->
+    <script src="script.js"></script>
 </body>
 </html>
