--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <section id="faq">
         <h2>자주 묻는 질문</h2>
         <p><strong>사전 예약이 필수인가요?</strong> 네, 사전 예약 시 할인 혜택과 VIP 테이블 추첨 기회를 얻을 수 있습니다.</p>
-        <p><strong>코스프레를 하면 무료로 입장할 수 있나요?</strong> 코스프레 챔피언에게 특별 상품이 제공되지만, 입장료는 정상적으로 부과됩니다.</p>
-        <p><strong>행사 중간에 입장이 가능한가요?</strong> 네, 행사는 오후 8시부터 새벽 1시까지 진행됩니다.</p>
+        <p><strong>코스프레를 하면 무료로 입장할 수 있나요?</strong> 네, 무료 입장입니다. 또한 코스프레 챔피언을 가리는 이벤트에서 우승시 특별 상품이 제공됩니다.</p>
+        <p><strong>행사 중간에 입장이 가능한가요?</strong> 네, 행사가 진행되는 동안 자유롭게 출입이 가능합니다. 단, 손목팔찌를 잃어버리면 재입장이 불가능합니다.</p>
         <p><strong>행사 당일에 칵테일 쿠폰을 사용할 수 있나요?</strong> 아니요, 칵테일 쿠폰은 다음 방문 시 사용 가능합니다.</p>
     </section>
 
